# mini-weather-report

./: Cargo.toml  README.md
mini-weather-report/: config.ini
src/: ascii.rs  config.rs  main.rs  utils.rs  weather_response.rs
